
next:
         - add check_ntp_offset
         - add check_mailq
         - add check_connections
         - improve check_process output
         - add check_process cpu metrics
         - improve check_service linux performance
         - add reload support for systemd service
         - add metrics to check_os_version
         - add metrics to check_snclient_version
         - fix using arguments in aliased checks (#69)
         - fix metrics order when using check_nsc_web
         - fix wrong path in logrotation on linux

0.15     Fri Dec 15 23:31:08 CET 2023
         - improve counter memory consumption
         - change internal wmi library
         - fix check_temperature default thresholds
         - fix check_kernel_stats listing processes and threads
         - fix wmi based checks memory usage
         - fix check_eventlog memory usage

0.14     Tue Dec 12 19:57:45 CET 2023
         - check_service (linux): add rss/vms/cpu/task metric and remove generic mem metric
         - check_service: add more metrics
         - add cli inventory mode
         - add duration / age / date / human number macro post processors
         - add support for %{} macros and $() as well
         - add timeout to check_drivesize for hanging mounts
         - add check_cpu_utilization
         - add check_mount
         - add check_temperature
         - add check_kernel_stats
         - add fmt macro operator to formt numbers
         - add automatic retries to wmi querys
         - add /api/v1/admin/reload rest endpoint to initialize config changes
         - add /api/v1/admin/certs/replace rest endpoint to replace certificates
         - support different allowed hosts settings for each web handler
         - fix cpu check on osx not returning metrics

0.13     Thu Nov 23 22:20:21 CET 2023
         - drop privileges when running node exporter
         - update node exporter to 1.7.0
         - add node exporter to osx packages
         - add check_load plugin